--- a/README
+++ b/README
@@ -170,7 +170,6 @@ STRING PARSING RULES
        parenthese ()
        brackets   []
        braces     {}
-       ltgt       <>
 
     The list delimiters may be separated from the list elements by
     whitespace, but this is optional except in cases where the first element
@@ -189,12 +188,12 @@ STRING PARSING RULES
 
       '( a b c )'
       '(a b c)'
-      '< a b c >'
+      '[ a b c ]'
       '{: a:b:c }'
 
     Any combination of list delimiters can be used to create nested lists:
 
-      '(a (b c) <: d:e > )'
+      '(a (b c) [: d:e ] )'
 
     There is currently no "quoting" mechanism, so there is no way to include
     the element delimiter in an element, so if an element can contain a
@@ -209,19 +208,16 @@ STRING PARSING RULES
     delimiter is treated as part of the list of elements. No nested lists
     can be crated. For example:
 
-      '( (a) (\ x > ) [\: b:) ] )'
+      '( (a) (\ x ] ) [\: b:) ] )'
 
     is the list:
 
       ( [ 'a' ],
-        [ 'x', '>' ],
+        [ 'x', ']' ],
         [ 'b', ')' ] )
 
     In order to include a parentheses (either left or right) in a list, use
     one of the other list delimiters with the "\" option.
-
-    NOTE: be careful about including '>' or '<' as the first element of a
-    list as they are operators. Use the '--' to force them to be elements.
 
 KNOWN OPERATIONS
     In the following operations, lists of elements may be either scalars or
@@ -659,9 +655,21 @@ KNOWN OPERATIONS
 
         Nothing is returned.
 
+BACKWARDS INCOMPATABILITIES
+    1.01 no longer uses <> as list delimiters
+        In order to simplify the use of the <, <=, >, and >= operators, the
+        <> symbols will no longer be used as list delimiters.
+
 KNOWN PROBLEMS
-        None at this point.
+    None at this point.
 
 AUTHOR
-        Sullivan Beck (sbeck@cpan.org)
+    Sullivan Beck (sbeck@cpan.org)
+
+POD ERRORS
+    Hey! The above document had some coding errors, which are explained
+    below:
+
+    Around line 743:
+        You forgot a '=back' before '=head1'
 
