--- a/HISTORY
+++ b/HISTORY
@@ -14,3 +14,6 @@ Version 1.02  2008-05-05
    Updated test.pl.
    Added Build.PL and several other things to meet requirements on
       http://cpants.perl.org/
+
+Version 1.03
+   Additional changes to meet requirements on http://cpants.perl.org/
