--- a/README
+++ b/README
@@ -663,13 +663,10 @@ BACKWARDS INCOMPATABILITIES
 KNOWN PROBLEMS
     None at this point.
 
+LICENSE
+    This script is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
+
 AUTHOR
     Sullivan Beck (sbeck@cpan.org)
-
-POD ERRORS
-    Hey! The above document had some coding errors, which are explained
-    below:
-
-    Around line 743:
-        You forgot a '=back' before '=head1'
 
