--- a/HISTORY
+++ b/HISTORY
@@ -22,5 +22,8 @@ Version 1.04  2008-05-09
    Final changes to meet requirements on http://cpants.perl.org/
    Bug fix so it won't fail with "Too early to specify a build action"
 
-Version 1.05
+Version 1.05  2009-03-02
+   Added default function
+   Updated tests
 
+Version 1.06
